<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/fragment_main_list_item" />

    <com.github.clans.fab.FloatingActionMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:fab_labelStyle="@style/customFab"
        app:menu_icon="@drawable/ic_delete">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/deleteSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/trashSingle"
            app:fab_colorPressed="@color/trashSinglePressed"
            android:src="@drawable/z_single"
            app:fab_size="mini"
            app:fab_label="Delete singles" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/deleteDouble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/trashDouble"
            app:fab_colorPressed="@color/trashDoublePressed"
            android:src="@drawable/z_double"
            app:fab_size="mini"
            app:fab_label="Delete doubles" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/trashAll"
            app:fab_colorPressed="@color/trashAllPressed"
            android:src="@drawable/z_all"
            app:fab_size="mini"
            app:fab_label="Delete All" />
    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>